# fooyin-plugins

./: .gitignore  .gitmodules  BUILD.md  README.md  fooyin-plugins.code-workspace
audiochecksum/: CMakeLists.txt  build.sh
audiochecksum/src/: audiochecksum.json.in  audiochecksumdefs.h  audiochecksumplugin.cpp  audiochecksumplugin.h  audiochecksumplugin_settings.cpp  audiochecksumplugin_settings.h  audiochecksumresult.h  audiochecksumresults.cpp  audiochecksumresults.h  audiochecksumresultsmodel.cpp  audiochecksumresultsmodel.h  audiochecksumscanner.cpp  audiochecksumscanner.h  audiochecksumworker.cpp  audiochecksumworker.h  flacstreaminfo.cpp  flacstreaminfo.h
bpmanalyzer/: CMakeLists.txt  build.sh
bpmanalyzer/src/: bpmanalyzer.json.in  bpmanalyzerdefs.h  bpmanalyzerplugin.cpp  bpmanalyzerplugin.h  bpmanalyzerplugin_settings.cpp  bpmanalyzerplugin_settings.h  bpmanalyzerresult.h  bpmanalyzerresults.cpp  bpmanalyzerresults.h  bpmanalyzerresultsmodel.cpp  bpmanalyzerresultsmodel.h  bpmanalyzerscanner.cpp  bpmanalyzerscanner.h  bpmanalyzerworker.cpp  bpmanalyzerworker.h
shortcutextender/: CMakeLists.txt  build.sh
shortcutextender/src/: deletecurrentlyplaying.cpp  deletecurrentlyplaying.h  deletedialog.cpp  deletedialog.h  deleteworker.cpp  deleteworker.h  fileopsbridge.h  fileopsconfirmdialog.cpp  fileopsconfirmdialog.h  fileopsexecutor.cpp  fileopsexecutor.h  fileopspresetshortcuts.cpp  fileopspresetshortcuts.h  fileopsscriptenvironment.h  shortcutextender.json.in  shortcutextenderdefs.h  shortcutextenderplugin.cpp  shortcutextenderplugin.h  shortcutextendersettings.cpp  shortcutextendersettings.h
